--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "zigbee2mqtt",
-    "version": "2.3.0-dev",
+    "version": "2.4.0",
     "description": "Zigbee to MQTT bridge using Zigbee-herdsman",
     "main": "index.js",
     "types": "dist/types/api.d.ts",
